--- a/other/react/react_native/52.问题汇总.md
+++ b/other/react/react_native/52.问题汇总.md
@@ -1,19 +1,19 @@
 1. 【ios】 RCTBridge required dispatch_sync to load RCTAppState
 
-这个问题是加完启动页后出现的，但重新构建ok，没有特别调整。   
+这个问题是加完启动页后出现的，但重新构建 ok，没有特别调整。
 
-2. [ios] No bundle URL present. 
-Make sure you're running a packager server or have included a .jsbundle file in your application bundle.   
+2. [ios] No bundle URL present.
+   Make sure you're running a packager server or have included a .jsbundle file in your application bundle.
 
-一般是因为同时开启了 ios 和 安卓 remote debug 或者运行在同一个命令行窗口，关掉重新启动；或者手动关闭了terminal，总之连不上调试服务器了，而服务器是通过terminal控制，冲突或者关闭都连不上。       
+一般是因为同时开启了 ios 和 安卓 remote debug 或者运行在同一个命令行窗口，关掉重新启动；或者手动关闭了 terminal，总之连不上调试服务器了，而服务器是通过 terminal 控制，冲突或者关闭都连不上。
 
-3. [android] Error type 3 Error: Activity class {} does not exist   
+3. [android] Error type 3 Error: Activity class {} does not exist
 
-> 上面四个都是环境问题，所以，不要说什么网上有诸多教程，还是要自己总结下。   
+> 上面四个都是环境问题，所以，不要说什么网上有诸多教程，还是要自己总结下。
 
 4. [third-party: 'config.h' file not found](https://github.com/facebook/react-native/issues/14382)
 
-@Ignigena 的方法ok：
+@Ignigena 的方法 ok：
 
 Running into the same issue here after upgrading from `0.44`. None of the above solutions or clearing caches did the trick for me. Here's what I did to get things working again:
 
@@ -23,10 +23,10 @@ Glog is configured and the required `config.h` header file is created for Xcode 
 
 5. 'React' must be in scope when using JSX (react/react-in-jsx-scope)
 
-一般是忘记引入依赖 `React`：   
+一般是忘记引入依赖 `React`：
 
 ```js
-import React from 'react';
+import React from "react";
 ```
 
 6. Component should be written as a pure function (react/prefer-stateless-function)
@@ -34,7 +34,6 @@ import React from 'react';
 不知道 app.js 中的 ReduxRoute 哪里不纯？
 
 7. React Native fetch() Network Request Failed
-
 
 The problem here was that iOS does not allow http requests by default, only https. If you want to enable http requests add this to your info.plist:
 
@@ -44,4 +43,28 @@ The problem here was that iOS does not allow http requests by default, only http
     <key>NSAllowsArbitraryLoads</key>
     <true/>
 </dict>
+```
+
+8. 无法更新 gradle，需要设置代理，提示下面的错误：
+
+```bash
+> Could not resolve all files for configuration ':classpath'.
+   > Could not find com.android.tools.build:gradle:3.0.1.
+```
+
+解决方案：
+
+在 android > build.gradle 添加 google 的 maven 仓库，如下：
+
+```js
+buildscript {
+    repositories {
+        //新的插件需要在google仓库下载
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.0.1'
+    }
+}
 ```
