--- a/other/代码规范/1. ESlint配置规则.md
+++ b/other/代码规范/1. ESlint配置规则.md
@@ -1,21 +1,22 @@
 ## 缘起
 
-通过 `vue-cli` 提供的脚手架搭建起来的demo，自带 eslint 检查规则有些不很爽，比如，对象最后一个键值对不允许有逗号，但加上将来维护代码肯定更加方便。   
+通过 `vue-cli` 提供的脚手架搭建起来的 demo，自带 eslint 检查规则有些不很爽，比如，对象最后一个键值对不允许有逗号，但加上将来维护代码肯定更加方便。
 
-如果一刀切把 eslint 去掉肯定不好，特别是多人合作的时候，可以通过 eslint 规范代码，这就设计如何自定义 eslint 规则。   
+如果一刀切把 eslint 去掉肯定不好，特别是多人合作的时候，可以通过 eslint 规范代码，这就设计如何自定义 eslint 规则。
 
 ## 自定义 eslint 规则
 
-vue 提供了一个文件 `.eslintrc.js` 可以在 `rules` 对象下添加自定义规则，格式如下：   
+vue 提供了一个文件 `.eslintrc.js` 可以在 `rules` 对象下添加自定义规则，格式如下：
 
 ```js
 rules: {
   key: value,
-} 
+}
 ```
-其中 key 为具体规则，value 为不同值对应不同动作。   
 
-- value 只有三个值，对应含义如下：   
+其中 key 为具体规则，value 为不同值对应不同动作。
+
+* value 只有三个值，对应含义如下：
 
 ```js
 "off"或者0    // 不对该规则进行检查
@@ -23,9 +24,9 @@ rules: {
 "error"或者2    // 违反改规则进行错误提醒（代码不能继续执行，除非该规则通过）  
 ```
 
-- 具体规则：
+* 具体规则：
 
-目前我在用的一个规则：   
+目前我在用的一个规则：
 
 ```js
 rules: {
@@ -41,7 +42,24 @@ rules: {
 },
 ```
 
-其他常见规则：   
+## 注意事项
+
+* 目前（2018-03-17）到处配置文件还只能用 `module.exports` 语法，因为 node 还不支持 ES6 的 `export/import`
+
+```js
+module.exports = {
+  // add your custom rules here,0 === off,1 === warn, 2 === error
+  rules: {}
+};
+```
+
+更多讨论：
+
+[Node 中没搞明白 require 和 import，你会被坑的很惨](http://imweb.io/topic/582293894067ce9726778be9)
+
+[nodejs 8 import module - require or import? [duplicate]](https://stackoverflow.com/questions/44985913/nodejs-8-import-module-require-or-import)
+
+## 其他常见规则：
 
 ```js
 "no-alert": 0, // 禁止使用alert confirm prompt
