添加路由文件

--- a/05_node/1_node_static_server/错误汇总.md
+++ b/05_node/1_node_static_server/错误汇总.md
@@ -1,3 +1,7 @@
 1.  `events.js:183 throw er; // Unhandled 'error' event`
 
 解答：可能是端口占用。
+
+2.  `Error: EISDIR: illegal operation on a directory, read`
+
+解答：访问的是目录，但这个目录不存在（直接导致 node 服务器关了！）
