--- a/05_node/07.腾讯云部署.md
+++ b/05_node/07.腾讯云部署.md
@@ -80,6 +80,8 @@ sudo yum install -y mongodb-org
 sudo yum install git-all
 ```
 
+> 如果安装完 git clone 的时候出现错误，配置自己的 public/private key pair [Git - Permission denied (publickey)](https://stackoverflow.com/questions/2643502/git-permission-denied-publickey)：生成 key `cd ~/.ssh && ssh-keygen`，配置 git `git config --global user.name "bob"` `git config --global user.email bob@...` (don't forget to restart your command line to make sure the config is reloaded)
+
 4）安装 yarn
 
 ```bash
@@ -90,7 +92,7 @@ sudo wget https://dl.yarnpkg.com/rpm/yarn.repo -O /etc/yum.repos.d/yarn.repo
 如果没有安装 nodejs，也应该配置 the NodeSource repository
 
 ```bash
-# 配置 the NodeSource repository
+# 配置 the NodeSource repository 这步可选
 curl --silent --location https://rpm.nodesource.com/setup_6.x | sudo bash -
 ```
 
@@ -103,7 +105,11 @@ sudo yum install yarn
 sudo dnf install yarn
 ```
 
-> 如果安装完 git clone 的时候出现错误，配置自己的 public/private key pair [Git - Permission denied (publickey)](https://stackoverflow.com/questions/2643502/git-permission-denied-publickey)
+5）全局安装 pm2
+
+```bash
+yarn global add pm2
+```
 
 ## 参考资料
 
