--- a/05_node/08.linux操作相关.md
+++ b/05_node/08.linux操作相关.md
@@ -1,5 +1,10 @@
 # Linux 基本操作命令
 
+基础中的基础：
+
+* 查看当前目录 `pwd`
+* 显示当前用户 `who am i`
+
 ## 修改前的说明
 
 首先列出您的 Linux 系统上的所有可用 shell：
@@ -50,3 +55,53 @@ zhao.wuz:x:1003:33::/home/zhao.wuz:/bin/bash
 ```
 
 参考自：[linux 修改用户默认 shell（转）](http://blog.csdn.net/he520478/article/details/45219279)
+
+## 其他常用命令
+
+1） 查找进程
+
+使用 `ps` 通常搭配 `grep` 使用，经常这么用：
+
+```bash
+# 显示所有进程
+ps -ax | grep chrome
+```
+
+```bash
+# 只筛选匹配的进程
+ps -ef | grep chrome
+```
+
+显示所有进程，并找出含有 `chrome` 进程
+
+* a = show processes for all users
+* x = also show processes not attached to a terminal
+
+> Its name comes from the _ed_ command `g/re/p` (globally search a regular expression and print), which has the same effect: doing a global search with the regular expression and printing all matching lines
+
+2） 杀死进程
+
+通常这样就可以
+
+```bash
+# 默认发送 SIGTERM
+kill pid
+```
+
+如果要从容退出，这样：
+
+```bash
+kill -s QUIT pid
+```
+
+more [当执行 kill -9 PID 时系统发生了什么](http://lifeofzjs.com/blog/2015/03/22/what-happens-when-you-kill-a-process/)，[Linux 进程 KILL－－Quit,INT,HUP,QUIT,和 TERM](http://blog.csdn.net/xyz846/article/details/24453567)
+
+3） `cat` 命令
+
+主要有三个功能：显示整个文件内容/创建文件/拼接文件。
+
+最常用的是“显示整个文件的内容”，使用如下：
+
+```bash
+cat filename
+```
