--- a/12_杂项/所遇bug整理/03.移动端font-boosting（字体自动变大）.md
+++ b/12_杂项/所遇bug整理/03.移动端font-boosting（字体自动变大）.md
@@ -22,11 +22,33 @@ html * {
 }
 ```
 
+> 使用 `100%` 更好一点。
+
+当然，更好的解决方法制定特定元素而非使用通配符：
+
+```css
+p {
+  max-height: 100%;
+}
+```
+
+NOTE：在 pc chrome 或者 safari 调试 ok，但到了真机，就失效了，添加 `-webkit-text-size-adjust: none;` ok。
+
+即完整的解决方案为：
+
+```css
+p {
+  max-height: 100%;
+  -webkit-text-size-adjust: none;
+}
+```
+
 2.  指定 `initial-scale = 1`（在我的项目中不行，要解决 `1px` 像素的问题）
 
 ## 参考资料
 
-【1】[诡异的字号异变现象——你知道 font boosting 吗？](https://404forest.com/2016/01/22/%E8%AF%A1%E5%BC%82%E7%9A%84%E5%AD%97%E5%8F%B7%E5%BC%82%E5%8F%98%E7%8E%B0%E8%B1%A1%E2%80%94%E2%80%94%E4%BD%A0%E7%9F%A5%E9%81%93font%20boosting%E5%90%97%EF%BC%9F/)  
-【2】[Font Boosting](https://github.com/amfe/article/issues/10)
-【3】[WebKit Bugzilla](https://bugs.webkit.org/show_bug.cgi?id=FontBoosting)
-【4】[how to override font boosting in mobile chrome](https://stackoverflow.com/questions/13430897/how-to-override-font-boosting-in-mobile-chrome)
+【1】[Font Boosting](https://github.com/amfe/article/issues/10)
+【2】[开发移动端页面时，字体自动变大](https://www.jianshu.com/p/b62e081fd53f)
+【3】[诡异的字号异变现象——你知道 font boosting 吗？](https://404forest.com/2016/01/22/%E8%AF%A1%E5%BC%82%E7%9A%84%E5%AD%97%E5%8F%B7%E5%BC%82%E5%8F%98%E7%8E%B0%E8%B1%A1%E2%80%94%E2%80%94%E4%BD%A0%E7%9F%A5%E9%81%93font%20boosting%E5%90%97%EF%BC%9F/)  
+【4】[WebKit Bugzilla](https://bugs.webkit.org/show_bug.cgi?id=FontBoosting)
+【5】[how to override font boosting in mobile chrome](https://stackoverflow.com/questions/13430897/how-to-override-font-boosting-in-mobile-chrome)
