--- a/01_JavaScript/1_method/35.记录函数执行次数.md
+++ b/01_JavaScript/1_method/35.记录函数执行次数.md
@@ -1,17 +1,17 @@
-记录函数执行的次数。   
+记录函数执行的次数。
 
-- 引入外部变量
+* 引入外部变量
 
 ```js
 // 引入外部变量
 let bar = {
-  num: 0,
+  num: 0
 };
 
 function foo() {
   bar.num += 1;
 
-  console.log('我执行了一次', `我总共执行了${bar.num}次`);
+  console.log("我执行了一次", `我总共执行了${bar.num}次`);
 }
 
 for (let i = 0; i < 4; i++) {
@@ -19,14 +19,14 @@ for (let i = 0; i < 4; i++) {
 }
 ```
 
-- 不引入外部变量
+* 不引入外部变量
 
 ```js
 // 不引入外部变量
 function foo() {
   this.num += 1;
 
-  console.log('我执行了一次', `我总共执行了${this.num}次`);
+  console.log("我执行了一次", `我总共执行了${this.num}次`);
 }
 
 foo.num = 0;
