--- a/03_HTML/01.input中placeholder单独设置颜色.md
+++ b/03_HTML/01.input中placeholder单独设置颜色.md
@@ -1,15 +1,20 @@
 ```css
-::-webkit-input-placeholder { /* WebKit browsers */
-    color:    #999;
+::-webkit-input-placeholder {
+  /* WebKit browsers */
+  color: #999;
 }
-:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-    color:    #999;
+:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: #999;
 }
-::-moz-placeholder { /* Mozilla Firefox 19+ */
-    color:    #999;
+::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #999;
 }
-:-ms-input-placeholder { /* Internet Explorer 10+ */
-    color:    #999;
+:-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+  color: #999;
 }
 ```
+
 referecne: https://segmentfault.com/q/1010000000397925
