箭头函数再理解

--- a/01_JavaScript/4_js算法题/02.求和函数.md
+++ b/01_JavaScript/4_js算法题/02.求和函数.md
@@ -18,9 +18,7 @@ sum(1, 2, 3);
 ```js
 function sum(...inputs) {
   let sum = 0;
-  inputs.forEach(e => {
-    sum += e;
-  });
+  inputs.forEach(e => (sum += e));
   return sum;
 }
 sum(1, 2, 3);
