闭包再理解

--- a/01_JavaScript/2_concept/31.闭包再理解.md
+++ b/01_JavaScript/2_concept/31.闭包再理解.md
@@ -10,9 +10,68 @@
 
 1.  闭包的组成：一个函数 + 这个函数中引用的变量（闭包创建了被定义时的作用域内的变量和函数的安全气泡，为后续执行闭包中的函数创建条件，闭包一词可以说很形象了）；
 
-2.  闭包创建：通常是闭包组成中的函数 return 出去，并复制给另一个变量。
+再看下面的例子：
+
+```js
+// setTimeout中定义的函数，算闭包么？
+// 实际上也算，和全局变量 i 构成了一个闭包，但没意义，因为它后续访问的还是全局变量 i，而不同闭包间共享 i
+// 这就是失去了闭包的意义
+// 闭包存在的意义一般是减少全局变量的，将需要的变量直接放在自己的闭包里，不和其他闭包共享
+// 看下面的例子
+for (var i = 0; i < 5; i++) {
+  setTimeout(function() {
+    console.log(i);
+  }, 1000 * i);
+}
+```
+
+```js
+// 通过立即执行函数，目的创建函数作用域（块级作用域），这样，就将闭包中的 i 缩小到立即执行函数的接受的参数
+// 而，每次执行函数，都会创建入参的副本
+// 这样，每个闭包中，不仅有独立的函数，还有独立的 i，i 的值随内部函数的创建时一同确定下来的
+// 还可以变化下，进一步所小闭包影响的范围
+for (var i = 0; i < 5; i++) {
+  (function(i) {
+    setTimeout(function() {
+      console.log(i);
+    }, 1000 * i);
+  })(i);
+}
+```
+
+```js
+// 进一步所小闭包影响的范围,,,,,待解答
+// for (var i = 0; i < 5; i++) {
+//   setTimeout(function() {
+//     console.log(i);
+//   }, 1000 * i);
+// }
+```
+
+```js
+// 立即执行函数的目的是创建块级作用域，进而创建独立的i，ES6 的 let 可以创建独立的块级作用域，这就不需要立即执行函数了
+for (let i = 0; i < 5; i++) {
+  setTimeout(function() {
+    console.log(i);
+  }, 1000 * i);
+}
+
+// 下面这个更能说明问题
+for (var i = 0; i < 5; i++) {
+  let j = i;
+  setTimeout(function() {
+    console.log(j);
+  }, 1000 * i); // 这里是 j 或者 i 无所谓了
+}
+```
+
+2.  闭包创建：通常是闭包组成中的函数 return 出去，并复制给另一个变量；还有一种常见场景：通过在定时器中的回调函数创建闭包。
 
 3.  理解闭包的关键点：词法作用域及其变量查找规则；函数每次调用实际是执行函数题里面的代码。
+
+## 闭包特点
+
+闭包不是在创建的那一刻时的快照，而是一个真实的状态封装（包括函数及函数创建时的词法环境[[Environment]]），是占有内存的（所以说，创建太多闭包影响性能，内存占用增多）。
 
 ## 看个例子
 
