闭包再理解

--- a/01_JavaScript/2_concept/31.闭包再理解.md
+++ b/01_JavaScript/2_concept/31.闭包再理解.md
@@ -37,6 +37,15 @@ for (var i = 0; i < 5; i++) {
     }, 1000 * i);
   })(i);
 }
+
+// 下面的版本更好理解，函数中的参数按值传递，将 i 复制给 j
+for (var i = 0; i < 5; i++) {
+  (function(j) {
+    setTimeout(function() {
+      console.log(j);
+    }, 1000 * j);
+  })(i);
+}
 ```
 
 ```js
