instanceof read again

--- a/01_JavaScript/2_concept/06.instanceof实现原理和基本包装类型.md
+++ b/01_JavaScript/2_concept/06.instanceof实现原理和基本包装类型.md
@@ -1,8 +1,12 @@
-- instanceof实现原理：
-`instanceof`检测对象 A 是不是对象 B 的实例的原理：查看对象 B 的 `prototype` 所指向的对象（即 B 的原型对象）是否在 A 的`[[prototype]]`链(原型链)上。   
+# instanceof实现原理：
+
+`instanceof`检测对象 A 是不是构造函数 B 的实例的原理：查看 B 当前当前的 `prototype` 所指向的对象（即 B 当前的原型对象，因为 B 的原型对象可能被重写）是否在 A 的`[[prototype]]`链(原型链)上。   
+
+或者这么说：检测右侧函数原型对象是否出现在左侧对象的原型链上。
 
 > 主要和 js 中的继承相关。  
 
 参考：
-1，http://www.itkaoyan.cn/?p=62   
-1，https://www.ibm.com/developerworks/cn/web/1306_jiangjj_jsinstanceof/index.html
+1，JS 忍者秘籍第二版 p188   
+2，http://www.itkaoyan.cn/?p=62   
+3，https://www.ibm.com/developerworks/cn/web/1306_jiangjj_jsinstanceof/index.html
