--- a/01_JavaScript/2_concept/34.import再理解.md
+++ b/01_JavaScript/2_concept/34.import再理解.md
@@ -28,8 +28,11 @@ import "module-name";
 
 ## 注意点
 
-其中 `import '/modules/my-module.js';` 要特别注意：仅为模块的副作用而导入一个模块，而不导入模块中的任何内容。 **这将运行模块中的全局代码, 但实际上不导入任何值**。
+其中 `import '/modules/my-module.js';` 要特别注意：仅为模块的副作用而导入一个模块，而不导入模块中的任何内容。 **这将运行模块中的全局代码, 但实际上不导入任何值**。   
+
+这其实有个名称，叫做：无绑定导入。主要作用有两点，一是提取公共代码（比如手机检测、浏览器检测）；二是做 polyfill，比如，给数组原型添加一个方法或者 polyfill 一个方法，因为，虽然模块内部顶级变量不会加入到全局变量，但是模块是可以访问全局变量的。
 
 ## 参考资料
 
-[import-MDN](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/import)
+1. [import-MDN](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/import)
+2. 深入理解ES6 Nicholas
