--- a/09_Utilties/3_webpack/04.在 npm script 中指定环境变量.md
+++ b/09_Utilties/3_webpack/04.在 npm script 中指定环境变量.md
@@ -10,6 +10,7 @@
 ```
 
 关于 npm scripts 的介绍可以查看这片文章：[npm scripts 使用指南](http://www.ruanyifeng.com/blog/2016/10/npm_scripts.html)
+关于 NODE_ENV 可以查看：[Node 环境变量 process.env 的那些事儿](https://segmentfault.com/a/1190000011683741)、[process 对象](http://javascript.ruanyifeng.com/nodejs/process.html)、[NODE_ENV 和 webpack](https://juejin.im/post/5a4ed5306fb9a01cbc6e2ee2)
 
 关键点：
 
