--- a/09_Utilties/1_code_spec/04.在谈ESlint + prettier自动格式化代码.md
+++ b/09_Utilties/1_code_spec/04.在谈ESlint + prettier自动格式化代码.md
@@ -8,8 +8,158 @@
 
 > 关于 ESLint 可修复的 style 类目参考这个列表下标有扳手标记的项 [Stylistic Issues](https://eslint.org/docs/rules/#stylistic-issues)
 
-举个例子：
+## 举个例子：
 
 ```js
-// 把
+methods: {
+  async testURL() {
+    let TEST = 11;
+  },
+
+},
+```
+
+在上面的例子中，
+
+ESLint 可以
+
+* 检查
+
+1.  TEST 是常量，应该用 const 声明；
+2.  TEST 声明后没有使用。
+
+* 自动修改
+
+1.  将 let 声明改为 const 声明
+
+但 ESLint 也只能做什么多了，但倒数第二个空行，ESLint 就无能为力了。这时候， Prettier 就登场了，
+
+Prettier 可以自动删除倒数第二行的空行。
+
+## 使用
+
+通用配置：安装下面依赖（版本号最新，复制方便。。）
+
+```json
+"babel-eslint": "^8.2.3",
+"eslint": "^4.19.1",
+"eslint-config-airbnb-base": "^12.1.0",
+"eslint-config-prettier": "^2.9.0",
+"eslint-plugin-prettier": "^2.6.0",
+"eslint-plugin-vue": "^4.4.0",
+```
+
+跟目录下配置文件两个 `.eslintrc.js`，`.prettierrc`
+
+`.prettierrc` 配置 prettier 检查规则，比如下面：
+
+```json
+{
+  "singleQuote": true,
+  "trailingComma": "all"
+}
+```
+
+vue 项目下 `.eslintrc.js` 配置如下：
+
+```js
+// https://eslint.org/docs/user-guide/configuring
+
+module.exports = {
+  root: true,
+  parserOptions: {
+    parser: 'babel-eslint',
+  },
+  env: {
+    browser: true,
+  },
+  // https://github.com/vuejs/eslint-plugin-vue#priority-a-essential-error-prevention
+  // consider switching to `plugin:vue/strongly-recommended` or `plugin:vue/recommended` for stricter rules.
+  extends: ['plugin:vue/essential', 'airbnb-base'],
+
+  // required to lint *.vue files，添加 prettier 插件
+  plugins: ['prettier', 'vue'],
+  // check if imports actually resolve
+  settings: {
+    'import/resolver': {
+      webpack: {
+        config: 'build/webpack.base.conf.js',
+      },
+    },
+  },
+  // add your custom rules here
+  rules: {
+    // don't require .vue extension when importing
+    'import/extensions': [
+      'error',
+      'always',
+      {
+        js: 'never',
+        vue: 'never',
+      },
+    ],
+
+    // 打开 prettier 错误检查，不然，向上面空行就检查不出来
+    'prettier/prettier': 'error',
+    // disallow reassignment of function parameters
+    // disallow parameter object manipulation except for specific exclusions
+    'no-param-reassign': [
+      'error',
+      {
+        props: true,
+        ignorePropertyModificationsFor: [
+          'state', // for vuex state
+          'acc', // for reduce accumulators
+          'e', // for e.returnvalue
+        ],
+      },
+    ],
+    // allow optionalDependencies
+    'import/no-extraneous-dependencies': [
+      'error',
+      {
+        optionalDependencies: ['test/unit/index.js'],
+      },
+    ],
+    // allow debugger during development
+    'no-debugger': process.env.NODE_ENV === 'production' ? 'error' : 'off',
+  },
+};
+```
+
+## vscode 集成
+
+注意一点就好：为了能够时 eslint 在文件保存的时候自动格式化（当然，集成了 prettier 的规则）通常设置如下：
+
+```json
+// 关闭编辑器默认保存格式化，避免和自定义冲突
+"editor.formatOnSave": false,
+"javascript.format.enable": false,
+
+// 将 prettier 集成到 eslint
+"prettier.eslintIntegration": true,
+
+// 打开 eslint 自动格式化，当然，包含了 prettier 的规则
+"eslint.autoFixOnSave": true,
+
+// 添加 vue 支持
+"eslint.validate": [
+  "javascript",
+  "javascriptreact",
+  {
+    "language": "vue",
+    "autoFix": true
+  }
+],
+// 使用插件格式化 html 貌似无效。。。。
+"vetur.format.defaultFormatter.html": "js-beautify-html",
+// 格式化插件的配置
+"vetur.format.defaultFormatterOptions": {
+  "js-beautify-html": {
+    // 属性强制折行对齐
+    // "wrap_attributes": "force-aligned",
+    // 关闭属性强制折行对齐
+    "wrap_attributes": "false",
+  }
+}
 ```
