--- a/04_Framework_and_Lib/2_Vue/23.vue 0-1 问题汇总.md
+++ b/04_Framework_and_Lib/2_Vue/23.vue 0-1 问题汇总.md
@@ -42,3 +42,64 @@ entry: ['babel-polyfill', './src/main.js'],
   ]
 }
 ```
+
+5.  webpack-simple 脚手架 build 时 html 导出路径错误
+
+不知道为啥，现在 webpack simple 脚手架 build 时不会自动生成 html 文件名，所以需要自己引入 `html-webpack-plugin` 并配置，这里，就出问题了。。。
+
+最开始我是这样配置的：
+
+```js
+new HtmlWebpackPlugin({
+  template: './src/index.html',
+  filename: 'index.html',
+  inject: 'body',
+  minify: {
+    removeComments: true,
+    collapseWhitespace: true,
+  },
+}),
+```
+
+结果一直报这个错误：
+
+```bash
+ERROR in Entry module not found: Error: Can't resolve '/Users/liuxiaoguang/work/lansheng/project/gtdollar_web_oa/src/index.html' in '/Users/liuxiaoguang/work/lansheng/project/gtdollar_web_oa'
+```
+
+很显然了，路径错了，index.html 直接在根目录，而不是 src 下面（看 log 啊）。
+
+6.  获取屏幕宽度报错：
+
+使用 `document.documentElement.clientWidth` 结果一直都是 980，还以为时 vue 做处理了，最后使用 `window.client.width`，但兼容性不好，最后发现，原来是在 index.html 文件中没有设置 meta 标签 `width=device-width` 。。。
+
+```html
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
+```
+
+7.  关于 vue-router 嵌套路由：
+
+子路由的 path 前面一定要加上父级路径名称，不然虽然可以跳转，但无法正常渲染：
+
+```js
+routes: [
+  {
+    path: '/accountant',
+    name: 'accountant',
+    component: Accountant,
+    children: [
+      {
+        // 加上父级路径 accountant
+        path: '/accountant/accountantAccount',
+        name: 'accountantAccount',
+        component: AccountantAccount,
+      },
+      {
+        path: '/accountant/accountantCapital',
+        name: 'accountantCapital',
+        component: AccountantCapital,
+      },
+    ],
+  },
+];
+```
