--- a/09_Utilties/1_code_spec/04.在谈ESlint + prettier自动格式化代码.md
+++ b/09_Utilties/1_code_spec/04.在谈ESlint + prettier自动格式化代码.md
@@ -41,10 +41,10 @@ Prettier 可以自动删除倒数第二行的空行。
 通用配置：安装下面依赖（版本号最新，复制方便。。）
 
 ```json
-"babel-eslint": "^8.2.3",
 "eslint": "^4.19.1",
 "eslint-config-airbnb-base": "^12.1.0",
 "eslint-config-prettier": "^2.9.0",
+"eslint-plugin-import": "^2.11.0",
 "eslint-plugin-prettier": "^2.6.0",
 "eslint-plugin-vue": "^4.4.0",
 ```
@@ -63,69 +63,55 @@ Prettier 可以自动删除倒数第二行的空行。
 vue 项目下 `.eslintrc.js` 配置如下：
 
 ```js
-// https://eslint.org/docs/user-guide/configuring
-
 module.exports = {
   root: true,
   parserOptions: {
-    parser: 'babel-eslint',
+    parser: "babel-eslint"
   },
   env: {
-    browser: true,
+    browser: true
   },
-  // https://github.com/vuejs/eslint-plugin-vue#priority-a-essential-error-prevention
-  // consider switching to `plugin:vue/strongly-recommended` or `plugin:vue/recommended` for stricter rules.
-  extends: ['plugin:vue/essential', 'airbnb-base'],
-
-  // required to lint *.vue files，添加 prettier 插件
-  plugins: ['prettier', 'vue'],
-  // check if imports actually resolve
+  // 这里顺序很重要，安装 eslint-config-prettier 后，再通过 extends 设置，可以避免冲突，有时候不够完善。。。，比如匿名函数的空格
+  // prettier 定制定太差，见这个，原来很多人都有这个问题啊 https://github.com/prettier/prettier/issues/1139
+  extends: ["plugin:vue/essential", "airbnb-base", "prettier"],
+  plugins: ["prettier", "vue"],
   settings: {
-    'import/resolver': {
+    "import/resolver": {
       webpack: {
-        config: 'build/webpack.base.conf.js',
-      },
-    },
+        config: "build/webpack.base.conf.js"
+      }
+    }
   },
   // add your custom rules here
   rules: {
-    // don't require .vue extension when importing
-    'import/extensions': [
-      'error',
-      'always',
+    "import/extensions": [
+      "error",
+      "always",
       {
-        js: 'never',
-        vue: 'never',
-      },
+        js: "never",
+        vue: "never"
+      }
     ],
 
     // 打开 prettier 错误检查，不然，向上面空行就检查不出来
-    'prettier/prettier': 'error',
-    // disallow reassignment of function parameters
-    // disallow parameter object manipulation except for specific exclusions
-    'no-param-reassign': [
-      'error',
+    "prettier/prettier": "error",
+    "no-param-reassign": [
+      "error",
       {
         props: true,
         ignorePropertyModificationsFor: [
-          'state', // for vuex state
-          'acc', // for reduce accumulators
-          'e', // for e.returnvalue
-        ],
-      },
+          "state", // for vuex state
+          "acc", // for reduce accumulators
+          "e" // for e.returnvalue
+        ]
+      }
     ],
-    // allow optionalDependencies
-    'import/no-extraneous-dependencies': [
-      'error',
-      {
-        optionalDependencies: ['test/unit/index.js'],
-      },
-    ],
-    // allow debugger during development
-    'no-debugger': process.env.NODE_ENV === 'production' ? 'error' : 'off',
-  },
+    "no-debugger": process.env.NODE_ENV === "production" ? "error" : "off"
+  }
 };
 ```
+
+参考下这篇文章：[Configure Prettier and ESLint in Visual Studio Code](https://www.39digits.com/configure-prettier-and-eslint-in-visual-studio-code/)
 
 ## vscode 集成
 
