--- a/09_Utilties/3_webpack/05.webpack中路径再理解.md
+++ b/09_Utilties/3_webpack/05.webpack中路径再理解.md
@@ -56,6 +56,6 @@ new ExtractTextPlugin("css/style.css")
 output.publicPath + 'css/style.css' = '/static/css/style.css'
 ```
 
-通常，会把 publicPath 设为相对路径，相对于 index.html 来说，当然也可以设置其他，不如绝对路径或者 CDN 什么的。
+通常，会把 publicPath 设为相对路径，相对于 index.html 来说，当然也可以设置其他，比如绝对路径或者 CDN 什么的。
 
 参考：[详解 Webpack2 的那些路径](http://www.qinshenxue.com/article/20170315092242.html)
