--- a/09_Utilties/3_webpack/03.import文件路径大小写问题.md
+++ b/09_Utilties/3_webpack/03.import文件路径大小写问题.md
@@ -1,4 +1,4 @@
-import 文件路径大小写要正确，不然回报下面的警告：
+import 文件路径大小写要正确，不然会报下面的警告：
 
 ```bash
 There are multiple modules with names that only differ in casing.
