--- a/09_Utilties/5_OS/1_Linux/01.常用命令.md
+++ b/09_Utilties/5_OS/1_Linux/01.常用命令.md
@@ -19,3 +19,24 @@ mv dir2 dir3
 ```
 
 > 因为`mv`命令本身就是先移除再移入的过程，如果移入的目录没有，就创建，如果再相同目录，就相当与重命名。
+
+* source 命令
+
+```bash
+source命令用法：
+source FileName
+  作用:在当前bash环境下读取并执行FileName中的命令。
+  注：该命令通常用命令“.”来替代。
+  如：source .bash_rc 与 . .bash_rc 是等效的。
+  注意：source命令与shell scripts的区别是，
+  source在当前bash环境下执行命令，而scripts是启动一个子shell来执行命令。
+  这样如果把设置环境变量（或alias等等）的命令写进scripts中，就只会影响子shell,无法改变当前的BASH,
+  所以通过文件（命令列）设置环境变量时，要用source 命令。
+
+简单来说就是将设置在文件中的配置信息马上生效
+比如你设了一个alias，或者一个PATH
+如果你不source修改的文件的话，只有等下次重启后才能生效
+如果你source了就马上生效了
+```
+
+配置 nginx 的环境变量时有用到。
