--- a/01_JavaScript/1_method/47.clear cookies.md
+++ b/01_JavaScript/1_method/47.clear cookies.md
@@ -15,7 +15,7 @@ function clearAllCookie() {
   const keys = document.cookie.match(/[^ =;]+(?=\=)/g);
   if (keys) {
     for (let i = keys.length; i--; )
-      document.cookie = keys[i] + '=0;expires=' + new Date(0).toUTCString();
+      document.cookie = `${keys[i]}=0;expires=${new Date(0).toUTCString()}`;
   }
 }
 ```
