--- a/05_node/14_koa2/03.使用路由模块及逻辑拆分.md
+++ b/05_node/14_koa2/03.使用路由模块及逻辑拆分.md
@@ -22,6 +22,8 @@ yarn add koa-router koa-bodyparser
 
 “但无论是 Node.js 提供的原始 request 对象，还是 koa 提供的 request 对象，都不提供解析 request 的 body 的功能”，`koa-bodyparser` 干这个活。
 
+但是如果上传图片，需要 multipart 上传方式，`koa-bodyparser` 不支持，用 `koa-body` 替换
+
 ## 相关文件内容
 
 1）routes/hello.js
@@ -55,6 +57,8 @@ router.post('/signin', index.signin);
 
 module.exports = router;
 ```
+
+koa 路由的本质是：通过定义一个路径比如`/hello/:name` or `/signin`，如果对应的执行一个函数，比如 `index.home`，而目前 js 又支持模块化开发，所以代码可以分离的很好。
 
 3）controllers/hello.js
 
