配置mysql全局环境变量

--- a/12_Computer_Basis/04_DB/03.安装、使用及卸载mySQL.md
+++ b/12_Computer_Basis/04_DB/03.安装、使用及卸载mySQL.md
@@ -42,3 +42,11 @@ sudo rm -rf /Library/PreferencePanes/My*
 6.  其他
 
 sequel Pro 在 mySQL 8 上面有个 bug [Need MySQL 8.0 support #2699](https://github.com/sequelpro/sequelpro/issues/2699)
+
+7.  设置全局环境变量
+
+`vi ~/.zshrc` 不存在就新建
+
+然后输入 `export PATH=${PATH}:/usr/local/mysql/bin`
+
+保存后 `source ~/.zshrc`
