sql 命令 && node update

--- a/05_node/15.Node + Koa2 + Vue 电商网站全栈实践.md
+++ b/05_node/15.Node + Koa2 + Vue 电商网站全栈实践.md
@@ -21,7 +21,7 @@
 
 相关教程：
 
-1.  如何编写 vue 插件，比如一个 toast
+## 如何编写 vue 插件，比如一个 toast
 
 1）定义全局组件
 
@@ -98,56 +98,14 @@ Vue.use(components);
 * 熟悉 vue transition，很好用，自己就不要再造轮子了，并且提供的 api 很人性。
 * 明白 `this.$el` 等价于该实例挂载的 dom 元素 [vue.js渐进式框架使用详解](http://m.php.cn/article/393075.html)
 
-## 先让项目跑起来
+## 数据库参数化查询
 
-### 后端
-
-目录：
-
-.  
- |-- app.js # 主逻辑  
- |-- package.json  
- |-- controllers # 处理页面逻辑  
- | |-- user.js # user 页面逻辑，比如登录、注册、用户信息等  
- |-- routes # 路由文件  
- | |-- user.js # index 页面路由
-
-* `controllers/user.js`
+1）"options.values.forEach is not a function"
 
 ```js
-exports.login = async ctx => {
-  ctx.body = 'hi';
-};
-```
-
-* `controllers/user.js`
-
-```js
-exports.login = async ctx => {
-  ctx.body = 'hi';
-};
-```
-
-* `app.js`
-
-```js
-const Koa = require('koa');
-const bodyParser = require('koa-bodyparser');
-const cors = require('@koa/cors');
-
-const app = new Koa();
-
-// parse request body:
-app.use(bodyParser());
-// allow 跨域请求
-app.use(cors());
-
-// add routes:
-const routes = ['user'];
-routes.forEach(route => {
-  app.use(require(`./routes/${route}`).routes());
-});
-
-app.listen(3000);
-console.log('app started at port 3000...');
+const searchCaptcha = await query(
+  'SELECT captcha, createdAt FROM captcha WHERE email = ?',
+  // 入参必须是数组
+  [data.email],
+);
 ```
