--- a/04_Framework_and_Lib/1_react/00_react_native/04.mac 下安装 android studio 问题汇总.md
+++ b/04_Framework_and_Lib/1_react/00_react_native/04.mac 下安装 android studio 问题汇总.md
@@ -47,7 +47,7 @@ rm -Rf ~/.gradle
 
 ## 初始化项目遇到的问题
 
-1. gradle resolve dependencies 'app _debugcompile'卡住
+1. gradle resolve dependencies `app _debugcompile` 卡住
 
 在 setting 里面设置 HTTP Proxy（国内开发要有稳定的代理）
 
