update webpack use and auto adapt img

--- a/09_Utilties/3_webpack/06.webpack4介绍及配置多页面应用.md
+++ b/09_Utilties/3_webpack/06.webpack4介绍及配置多页面应用.md
@@ -73,9 +73,16 @@ yarn add optimize-css-assets-webpack-plugin -D
 ```bash
 yarn add babel-loader@^8.0.0-beta @babel/core @babel/preset-env
 ```
+
 上述为 [webpack 4](https://github.com/babel/babel-loader/issues/620)
 
+## 图片相关
 
+- 引入 file-loader
+- 只引入 file-loader 还不够，还要引入 html-loader，不然，html 中的图片没法识别。
+
+
+> 另外，img 不会生成单独的 contenthash，那如何对 image 进行版本控制呢？
 
 ## 开发环境
 
@@ -100,11 +107,11 @@ devServer: {
 ```js
 // 配合 webpack 配置实现热更新
 if (module.hot) {
-    module.hot.accept();
+  module.hot.accept();
 }
 ```
 
-> 如果 html 的DOM 元素改变
+> 如果 html 的 DOM 元素改变
 
 ## 最佳实践
 
