webpack4 slit and compress code

--- a/09_Utilties/3_webpack/06.webpack4介绍及配置多页面应用.md
+++ b/09_Utilties/3_webpack/06.webpack4介绍及配置多页面应用.md
@@ -5,6 +5,7 @@
 [webpack 4: 模式(mode)和优化项(optimization)说明](http://forgetting.me/?p=210)
 [webpack4-用之初体验，一起敲它十一遍](https://juejin.im/post/5adea0106fb9a07a9d6ff6de)
 [Webpack 4 Tutorial: from 0 Conf to Production Mode](https://www.valentinog.com/blog/webpack-4-tutorial/)
+[webpack-MultiPage-static](https://github.com/vhtml/webpack-MultiPage-static)
 
 ## 基本结构
 
@@ -66,6 +67,13 @@ yarn add optimize-css-assets-webpack-plugin -D
 > 这个插件只适合 wp4。另外，wb4 如果 mode 是 production 模式，会[自动压缩 js](https://webpack.js.org/configuration/optimization/)，
 > 但 css 还需要自己配置。
 
+```js
+// wb 配置
+optimization: {
+  minimizer: [new OptimizeCssAssetsPlugin({})],
+},
+```
+
 ## js 相关
 
 - babel
@@ -76,11 +84,76 @@ yarn add babel-loader@^8.0.0-beta @babel/core @babel/preset-env
 
 上述为 [webpack 4](https://github.com/babel/babel-loader/issues/620)
 
+配置完后会自定转换 es5 语法到 es6
+
+```bash
+{
+  test: /\.js$/,
+  include: /src/,
+  // exclude: /(node_modules)/,
+  use: {
+    loader: 'babel-loader',
+    options: {
+      presets: ['@babel/preset-env'],
+    },
+  },
+},
+```
+
+## html 相关
+
+自动添加 静态文件路径等，
+
+```bash
+yarn add html-webpack-plugin -D
+```
+
+多入口文件：
+
+```js
+const HtmlWebpackPlugin = require('html-webpack-plugin');
+
+const pagesArr = ['index', 'about'];
+const htmlWebpackConfig = pagesArr.map(
+  e =>
+    new HtmlWebpackPlugin({
+      template: `./src/view/${e}.html`,
+
+      // file 输出以及 chunks 默认从 output 的目录开始
+      // 同时，chunks 会自动添加 hash/chunkhash，多页面指定 chunks 非常有用
+      filename: `${e}.html`,
+
+      // 注意把 split 的代码写清楚
+      chunks: ['vendor', 'common', e],
+      minify: {
+        // 压缩HTML文件
+        removeComments: true, // 移除HTML中的注释
+        collapseWhitespace: true, // 删除空白符与换行符
+      },
+    }),
+);
+```
+
 ## 图片相关
 
 - 引入 file-loader
 - 只引入 file-loader 还不够，还要引入 html-loader，不然，html 中的图片没法识别。
 
+```bash
+{
+  test: /\.html$/,
+  use: ['html-loader'],
+},
+{
+  test: /\.(png|jpg|jpeg|svg|gif)/,
+  use: {
+    loader: 'file-loader',
+    options: {
+      name: 'img/[name].[ext]',
+    },
+  },
+},
+```
 
 > 另外，img 不会生成单独的 contenthash，那如何对 image 进行版本控制呢？
 
@@ -112,6 +185,92 @@ if (module.hot) {
 ```
 
 > 如果 html 的 DOM 元素改变
+
+- 分析打包结果
+
+```bash
+yarn add webpack-bundle-analyzer -D
+```
+
+```js
+const { BundleAnalyzerPlugin } = require('webpack-bundle-analyzer');
+
+plugins: [
+  // 打包分析，只在需要的时候开启
+  new BundleAnalyzerPlugin(),
+],
+```
+## sourceMap
+
+sourcemap 干嘛用：出了问题可以定位源码。
+
+如何配置：
+
+开发环境： `devtool: 'cheap-module-eval-source-map',`
+生产环境： `devtool: 'cheap-module-source-map',`
+
+webpack4 新提供了两个插件：[SourceMapDevToolPlugin](https://webpack.docschina.org/plugins/source-map-dev-tool-plugin)、[EvalSourceMapDevToolPlugin](https://webpack.docschina.org/plugins/eval-source-map-dev-tool-plugin/) 可以颗粒度更细的对 sourcemap 进行管理，还没用。因为直接配置 `devtool` 目前来看够用。
+
+参考下这篇文章 [Webpack 的 devtool 和 source maps](https://www.jianshu.com/p/ad96e712564c)
+
+## 优化
+
+- 提取公共代码：
+
+不需要额外插件，使用 wb 自带 splitChunks
+
+```js
+optimization: {
+  splitChunks: {
+    // 只对入口文件处理
+    chunks: 'initial',
+    cacheGroups: {
+      vendor: {
+        //  split  `src/js/vendor` 目录下共用的代码到`vendor.js`
+        // 这里指的是第三方库，很少改动，故单独做持久化缓存
+        // 注意，目前 splitChunks 在 split css 时有 bug？现在只 split js 代码
+        // 不推荐直接匹配 node_modules 文件夹，如上，因为涉及 css，打包后 css 错误
+        test: /src\/js\/vendor\//,
+        name: 'vendor',
+        // 只要第三方库，只要 > 0B, 就 split 出来
+        minSize: 0,
+        priority: 10,
+        enforce: true,
+      },
+      common: {
+        //  split  `src/js/common` 目录下共用的代码到`common.js`
+        // 这里是自定义的公共 js 代码，改的频率比第三方库要高，但比具体页面的 js 文件低
+        // 故单独 split 出来做持久化缓存
+        // 不一定共用才 split ，很少改动的也 split 出来，如上的 vender.js
+        // 但此处至少两个共用 minChunks 才抽出
+        test: /src\/js\/common\//,
+        name: 'common',
+        minChunks: 2,
+        minSize: 0,
+        priority: 9,
+        enforce: true,
+      },
+    },
+  },
+},
+```
+
+> 没有成功分离出 css
+
+- 压缩
+
+在 production 模式下，js 貌似没有自动压缩，所以手动配置一下。
+
+```bash
+yarn add uglifyjs-webpack-plugin -D
+```
+
+```js
+// js 压缩
+plugins: [
+  new UglifyJsPlugin(),
+],
+```
 
 ## 最佳实践
 
