update array map and parseInt

--- a/01_JavaScript/1_method/41.数组map方法和变量提升再理解.md
+++ b/01_JavaScript/1_method/41.数组map方法和变量提升再理解.md
@@ -8,9 +8,9 @@ console.log(["1", "2", "3"].map(parseInt));
 
 最开始以为 `[1, 2, 3]`，但实际确实 `[1, NaN, NaN]`。原因是：
 
-`map` 的毁掉函数接受三个参数 `map(funciton callBack(currentValue[, index[, Array]]){ // 返回新数组 })`
+`map` 的回调函数接受三个参数 `map(funciton callBack(currentValue[, index[, Array]]){ // 返回新数组 })`
 
-而 `parseInt` 函数也可以介绍两个参数，第二个参数是 n 进制，此时也传递进去了，实际发生了下面的事情：
+而 `parseInt` 函数也可以接受两个参数，第二个参数是 n 进制，此时也传递进去了，实际发生了下面的事情：
 
 ```js
 parseInt("1", 0);
@@ -20,7 +20,11 @@ parseInt("3", 2);
 
 如果 `radix` is `undefined` or `0`, `parseInt` 就自己选一个 radix 了。。。详情[参考这里](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/parseInt#Description)。
 
-要说明的一点是：**radix 有意义的取值区间为`2 ～ 36`**，处理 `0` 之外，如果是其他值直接返回 `NaN`。
+要说明的一点是：**radix 有意义的取值区间为`2 ～ 36`**，除了 `0` 之外，如果是其他值直接返回 `NaN`。
+
+> 自己的盲点：
+1. 函数默认参数的传递
+2. parseInt 返回如果为有效数字，则这个数字是十进制的，但是，被转换的数字可以通过第二个参数指定进制
 
 好了，分析上述结果：
 
