腾讯云部署

--- a/09_Utilties/5_OS/1_Linux/01.常用命令.md
+++ b/09_Utilties/5_OS/1_Linux/01.常用命令.md
@@ -1,4 +1,4 @@
-* 移动目录
+- 移动目录
 
 ```bash
 mv <directory> <directory>
@@ -20,7 +20,7 @@ mv dir2 dir3
 
 > 因为`mv`命令本身就是先移除再移入的过程，如果移入的目录没有，就创建，如果再相同目录，就相当与重命名。
 
-* source 命令
+- source 命令
 
 ```bash
 source命令用法：
@@ -40,3 +40,15 @@ source FileName
 ```
 
 配置 nginx 的环境变量时有用到。
+
+- ps, |, grep 命令
+
+ps: 报告当前系统的进程状态 -e 显示所有进程，f 显示 UID、PPID 等信息
+|: 管道，连接
+grep: 文本搜索工具 （global search regular expression(RE) and print out the line，全面搜索正则表达式并把行打印出来）
+
+比如，查找 nginx 进程相关安装目录：
+
+```bash
+ps -ef | grep nginx
+```
