云部署及vue相关

--- a/05_node/07.腾讯云部署(centOS).md
+++ b/05_node/07.腾讯云部署(centOS).md
@@ -111,7 +111,45 @@ sudo dnf install yarn
 yarn global add pm2
 ```
 
+6）安装 zsh 和 oh-my-zsh
+
+6.1）安装 zsh
+
+```bash
+yum install -y zsh
+```
+
+装完之后验证一下最后一行有 `/bin/zsh`
+
+```bash
+[root@hadoop3 ~]# cat /etc/shells
+/bin/sh
+/bin/bash
+/sbin/nologin
+/usr/bin/sh
+/usr/bin/bash
+/usr/sbin/nologin
+/bin/zsh
+```
+
+切换 shell 为 zsh
+
+```bash
+chsh -s /bin/zsh
+```
+
+然后`echo $SHELL`看还是 bash，很多博客说要重启，其实只要退出终端重新打开就切换过来了。
+
+6.2）安装 oh-my-zsh
+
+```bash
+wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | sh
+```
+
+更多配置参考这个：[树莓派提高shell逼格oh-my-zsh](https://www.jianshu.com/p/8b824bbdd471)
+
 ## 参考资料
 
 【1】[腾讯云服务器部署 Node.js 应用](http://yedanbo.com/post/2017/qcloud-deploy-nodejs-application/)  
 【2】[Install MongoDB Community Edition on Red Hat Enterprise or CentOS Linux](https://docs.mongodb.com/manual/tutorial/install-mongodb-on-red-hat/)
+【2】[Linux CentOS 安装 zsh、oh-my-zsh 和 autojump](https://blog.csdn.net/qq_35753140/article/details/79551560)
