--- a/09_Utilties/10_云部署.md/01.centOS中文乱码.md
+++ b/09_Utilties/10_云部署.md/01.centOS中文乱码.md
@@ -20,8 +20,14 @@ set encoding=prc
 修改 /etc/locale.conf 文件，设置为你想要的那种编码
 
 ```bash
-LANG=zh_CN.UTF-8
+LANG=en_US.UTF-8
+
+# 只是允许输入和显示中文，其他默认英文？
+LC_CTYPE=zh_CN.UTF-8
 ```
+
+> 上面改完是可以输入显示中文了，但整个系统的字符全部用中文显示？导致 git 命令出错。
+这篇文章讲的很好 [locale的设定及其LANG、LC_ALL、LANGUAGE环境变量的区别(转帖) ](http://jmut.bokee.com/6874378.html)
 
 - mysql 中文乱码
 
@@ -44,3 +50,7 @@ service mysqld restart
 ```
 
 > 之前加入的编码如果是错的，需要重新建立。没法更新？
+
+- git 英文也乱码？
+
+见系统乱码解释，另外可以参考这篇文章 [git乱码解决方案汇总](https://blog.zengrong.net/post/1249.html)
