--- a/09_Utilties/5_OS/1_Linux/01.常用命令.md
+++ b/09_Utilties/5_OS/1_Linux/01.常用命令.md
@@ -1,4 +1,11 @@
-- 移动目录
+## 简述
+
+- mv move
+- cat concatenate(连接)
+
+## 详解
+
+- mv 移动目录
 
 ```bash
 mv <directory> <directory>
@@ -23,7 +30,8 @@ mv dir2 dir3
 - source 命令
 
 ```bash
-source命令用法：
+source命令用法（重载命令）：
+
 source FileName
   作用:在当前bash环境下读取并执行FileName中的命令。
   注：该命令通常用命令“.”来替代。
@@ -52,3 +60,7 @@ grep: 文本搜索工具 （global search regular expression(RE) and print out t
 ```bash
 ps -ef | grep nginx
 ```
+
+- echo
+
+- cat
